--- a/src/main/resources/static/AccountsPage/index.html
+++ b/src/main/resources/static/AccountsPage/index.html
@@ -1,41 +1,58 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js'></script>
-</head>
-<script type='text/javascript'>
-	function createAccount(id, balance) {
-		var details = JSON.stringify({customerId: id, initialCredit: balance});
-		$.ajax({
-			url: '/assignment-1.0/accounts/',
-			type: 'POST',
-			processData: false,
-			data: details,
-			contentType: 'application/json',
-			success: function(data) {
-				alert('Opened account ID: ' + data.accountId);
-			},
-			error: function() {
-			    alert("Account could not be opened !");
-			}
-		});
-	}
-</script>
-<body>
-	<h2>Accounts</h2>
-	<table style="border:0px;">
-		<tr>
-			<td>Enter customer ID:&emsp;</td>
-			<td><input type='text' id='param1'></td>
-		</tr>
-		<tr>
-			<td>Enter Initial Credit:&emsp;</td>
-			<td><input type='text' id='param2'></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td><button onclick='return createAccount(param1.value, param2.value);'>Create Account</button></td>
-		</tr>
-	</table>
-</body>
+	<head>
+	  	<meta charset="utf-8">
+	  	<meta name="viewport" content="width=device-width, initial-scale=1">
+	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	</head>
+	<script type='text/javascript'>
+		function createAccount(id, balance) {
+			var details = JSON.stringify({customerId: id, initialCredit: balance});
+			$.ajax({
+				url: '/assignment-1.0/accounts/',
+				type: 'POST',
+				processData: false,
+				data: details,
+				contentType: 'application/json',
+				success: function(data) {
+					$('#error').attr("hidden", true);
+					$('#success').html('Opened account ID: ' + data.accountId);
+					$('#success').attr("hidden", false);
+				},
+				error: function() {
+					$('#success').attr("hidden", true);
+					$('#error').html("Account could not be opened due to invalid data !");
+					$('#error').attr("hidden", false);
+				}
+			});
+		}
+	</script>
+	<body>
+		<div class="page-header">
+			<h1>Accounts Form</h1>
+		</div>
+		<form class="form-horizontal">
+		  	<div class="form-group">
+		    	<label class="control-label col-sm-2">Enter Customer ID:</label>
+		    	<div class="col-xs-2">
+		      		<input type="text" class="form-control" id="param1" placeholder="Customer ID">
+		    	</div>
+		  	</div>
+		  	<div class="form-group">
+		    	<label class="control-label col-sm-2">Enter Initial Credit:</label>
+		    	<div class="col-xs-2">
+		      		<input type="text" class="form-control" id="param2" placeholder="Initial Credit">
+		    	</div>
+		  	</div>
+		  	<div class="form-group">
+		    	<div class="col-sm-offset-2 col-sm-10">
+		      		<button type="button" class="btn btn-primary" onclick='createAccount(param1.value, param2.value);'>Create Account</button>
+		    	</div>
+		  	</div>
+		  	<div class="alert alert-danger col-sm-offset-2 col-sm-4" hidden="true" id="error"></div>
+		  	<div class="alert alert-success col-sm-offset-2 col-sm-3" hidden="true" id="success"></div>
+		</form>
+	</body>
 </html>
